--- a/flutter_app_1/android/app/build.gradle
+++ b/flutter_app_1/android/app/build.gradle
@@ -23,6 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
+    compileSdkVersion 34
     namespace "com.example.flutter_app_1"
     compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
