--- a/paddy_doc/paddy_doc/pubspec.yaml
+++ b/paddy_doc/paddy_doc/pubspec.yaml
@@ -5,6 +5,7 @@ description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
+
 environment:
   sdk: '>=3.3.1 <4.0.0'
 
@@ -17,13 +18,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+  path_provider: ^2.0.2
   image_picker: ^0.8.4+4  
   http: ^0.13.3
-
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
